test/errors/e58.gm
Procedure test_collection_of_collection_method_types(G:Graph)
{
    Collection<N_S> c;
    N_O o;
    N_S s;
    
    
    For(x: c.Items) {
    	s = x; //ok
    	o = x; //type error
    }
}
